--- a/shopweb/web/templates/cartitem.html
+++ b/shopweb/web/templates/cartitem.html
@@ -1,11 +1,11 @@
-<div data-snip="item">
+<div class="cart_item_box" data-snip="item">
   <img class="thumb" />
   <div class="cart_item">
     <ul>
       <li><span class="cart_title"></span></li>
-      <li><span data-loc="quantity" /> <input type="number" maxlength="3" size="3" /> <a href="#"><img src="/static/images/close.png"
-          onClick="" /></a></li>
+      <li><span data-loc="quantity" /> <input type="number" maxlength="3" size="3" /></li>
       <li><span data-loc="price" /> <span class="cart_price"></span> <span>RON</span></li>
     </ul>
+    <a href="#"><img src="/static/images/close.png" /></a>
   </div>
 </div>
