--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -111,46 +111,26 @@ a:active {
 }
 
 .btn {
-  background: #949494;
-  background-image: -webkit-linear-gradient(top, #949494, #000000);
-  background-image: -moz-linear-gradient(top, #949494, #000000);
-  background-image: -ms-linear-gradient(top, #949494, #000000);
-  background-image: -o-linear-gradient(top, #949494, #000000);
-  background-image: linear-gradient(to bottom, #949494, #000000);
-  -webkit-border-radius: 10;
-  -moz-border-radius: 10;
-  border-radius: 10px;
-  -webkit-box-shadow: 0px 0px 10px #000000;
-  -moz-box-shadow: 0px 0px 10px #000000;
-  box-shadow: 0px 0px 5px #000000;
-  color: #ffffff;
-  font-size: 20px;
-  font-weight: 400;
-  padding: 7px 20px 10px 20px;
-  border: solid #7a7a7a 1px;
+  padding: 10px 10px 10px 10px;
+  border: 1px solid #999999;
   text-decoration: none;
   position: relative;
-  top: 20px;
+  margin-top: 10px;
+  display: inline-block;
 }
 
 .btn:hover {
-  background: #b8b8b8;
-  background-image: -webkit-linear-gradient(top, #b8b8b8, #403f40);
-  background-image: -moz-linear-gradient(top, #b8b8b8, #403f40);
-  background-image: -ms-linear-gradient(top, #b8b8b8, #403f40);
-  background-image: -o-linear-gradient(top, #b8b8b8, #403f40);
-  background-image: linear-gradient(to bottom, #b8b8b8, #403f40);
+  border: 1px solid #000000;
   text-decoration: none;
   cursor: pointer;
 }
 
 .header {
 	height: 60px;
-	background-color: #045584;
 	position: fixed;
 	width: 100%;
 	z-index: 80;
-	box-shadow: 0px 0px 30px 1px #444444;
+	background-color: #333333;
 }
 
 .header * {
@@ -716,16 +696,22 @@ a:active {
 
 #search div {
 	float: left;
-	margin-top: 6px;
+	margin-top: 4px;
 }
 
 #search input {
-	background-color: #B7CBD7;
-	border: none;
-	box-shadow: 0 0 20px 1px #aaaaaa;
-	border-radius: 10px;
-	width: 150px;
+	border: 1px solid #cccccc;
+	width: 200px;
+	height: 32px;
+	color: #999999;
+	font-size: 20px;
+	
 }
+
+#search_text:hover {
+	border-color: #000000;
+}
+
 
 #search img {
 	margin-top: 3px;
@@ -765,10 +751,6 @@ a:active {
 #terms_wrapper label {
 	padding-top: 5px;
 	padding-bottom: 5px;
-}
-
-#search_text:hover {
-	background-color: #eeeeee;
 }
 
 #notice_e,#notice_connect_e {
@@ -885,6 +867,7 @@ a:active {
 
 .dialog_footer div {
 	float: right;
+	margin-right: 10px;
 }
 
 .add_item {
