--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -6,9 +6,11 @@
 <script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
 <script type="text/javascript" src="/static/js/jquery.cookie.js"></script>
 <script type="text/javascript" src="/static/js/purl.js"></script>
-<script type="text/javascript" src="/static/js/common.js"></script>
+<script type="text/javascript" src="/static/js/blockui.js"></script>
 <script type="text/javascript" src="/static/js/jquery.tabify.js"></script>
 <script type="text/javascript" src="/static/js/jquery.base64.min.js"></script>
+<script type="text/javascript" src="/static/js/common.js"></script>
+
 </head>
 
 <body>
@@ -117,7 +119,7 @@
     </div>
     <div class="dialog_footer">
       <div id="save_user">
-        <a href="#" data-loc="save"></a>
+        <a class="btn" href="#" data-loc="save"></a>
       </div>
     </div>
   </div>
