--- a/shopweb/web/templates/productquickview.html
+++ b/shopweb/web/templates/productquickview.html
@@ -58,7 +58,7 @@
                 </ul>
               </div>
               
-              <div class="horiz_right" id="save_product"><a href="#" data-loc="save"></a></div>
+              <div class="horiz_right btn" id="save_product"><a href="#" data-loc="save"></a></div>
               
           	  <div id="edit_fields" class="fields tab_content">
           	    <div class="column">
