--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -136,35 +136,35 @@
         </ul>
         <div id="pf" class="content">
           <form id="order_form">
-            <div>
+            <div class="row">
               <label for="lname" data-loc="last.name"></label><input id="lname" name="lname" type="text" />
             </div>
-            <div>
+            <div class="row">
               <label for="fname" data-loc="first.name"></label><input id="fname" name="fname" type="text" />
             </div>
-            <div>
+            <div class="row">
               <label for="email" data-loc="email"></label><input id="email" name="email" type="text" />
             </div>
-            <div>
+            <div class="row">
               <label for="phone" data-loc="phone"></label><input id="phone" name="phone" type="text" />
             </div>
-            <div>
+            <div class="row">
               <label for="cnp" data-loc="cnp"></label><input id="cnp" name="cnp" type="text" />
             </div>
-            <div>
+            <div class="row">
               <input id="country" name="country" type="hidden" value="Romania" /> <label for="region" data-loc="region"></label><input
                 id="region" name="region" type="text" />
             </div>
-            <div>
+            <div class="row">
               <label for="city" data-loc="city"></label><input id="city" name="city" type="text" />
             </div>
-            <div>
+            <div class="row">
               <label for="address" data-loc="address"></label><input id="address" name="address" type="text" />
             </div>
-            <div>
+            <div class="row">
               <label for="zip" data-loc="zip"></label><input id="zip" name="zip" type="text" />
             </div>
-            <div>
+            <div class="row">
               <div id="terms_wrapper">
                 <input id="terms" name="terms" type="checkbox" /> <label for="terms" data-loc="terms.and.conds"></label>
               </div>
@@ -176,41 +176,41 @@
         </div>
         <div id="pj" class="content">
           <form id="order_form_company">
-            <div>
+            <div class="row">
               <label for="cname" data-loc="company.name"></label><input id="cname" name="cname" type="text" />
             </div>
-            <div>
+            <div class="row">
               <label for="cif" data-loc="company.cif"></label><input id="cif" name="cif" type="text" />
             </div>
-            <div>
+            <div class="row">
               <label for="cregcom" data-loc="company.reg.com"></label><input id="cregcom" name="cregcom" type="text" />
             </div>
-            <div>
+            <div class="row">
               <label for="cbank" data-loc="company.bank"></label><input id="cbank" name="cbank" type="text" />
             </div>
-            <div>
+            <div class="row">
               <label for="cbankaccount" data-loc="company.bank.account"></label><input id="cbankaccount" name="cbankaccount" type="text" />
             </div>
-            <div>
+            <div class="row">
               <label for="cemail" data-loc="email"></label><input id="cemail" name="cemail" type="text" />
             </div>
-            <div>
+            <div class="row">
               <label for="cphone" data-loc="phone"></label><input id="cphone" name="cphone" type="text" />
             </div>
-            <div>
+            <div class="row">
               <input id="ccountry" name="ccountry" type="hidden" value="Romania" /> <label for="cregion" data-loc="region"></label><input
                 id="cregion" name="cregion" type="text" />
             </div>
-            <div>
+            <div class="row">
               <label for="ccity" data-loc="city"></label><input id="ccity" name="ccity" type="text" />
             </div>
-            <div>
+            <div class="row">
               <label for="caddress" data-loc="address"></label><input id="caddress" name="caddress" type="text" />
             </div>
-            <div>
+            <div class="row">
               <label for="czip" data-loc="zip"></label><input id="czip" name="czip" type="text" />
             </div>
-            <div>
+            <div class="row">
               <div id="terms_wrapper">
                 <input id="cterms" name="terms" type="checkbox" /> <label for="cterms" data-loc="terms.and.conds"></label>
               </div>
