--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -30,7 +30,7 @@
           <span data-snip="user"></span>
         </div>
         <div id="user_symbol" class="clickable top_items top5"></div>
-        <div id="settings_symbol" class="clickable top_items top5">
+        <div id="settings_symbol" class="clickable top_items top5" data-permissions="read">
           <a href="/accountsettings"><img src="/static/images/settings.png" /></a>
         </div>
         <div id="search" class="top_items">
@@ -137,10 +137,10 @@
         <div id="pf" class="content">
           <form id="order_form">
             <div class="row">
-              <label for="lname" data-loc="last.name"></label><input id="lname" name="lname" type="text" />
+              <label for="fname" data-loc="first.name"></label><input id="fname" name="fname" type="text" />
             </div>
             <div class="row">
-              <label for="fname" data-loc="first.name"></label><input id="fname" name="fname" type="text" />
+              <label for="lname" data-loc="last.name"></label><input id="lname" name="lname" type="text" />
             </div>
             <div class="row">
               <label for="email" data-loc="email"></label><input id="email" name="email" type="text" />
