--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -1,6 +1,5 @@
 <html>
 <head>
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:700,300,400' rel='stylesheet' type='text/css' />
 <link href="/static/css/style.css" rel="stylesheet" type="text/css" />
 
 <script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
@@ -151,9 +150,13 @@
             <div class="row">
               <label for="cnp" data-loc="cnp"></label><input id="cnp" name="cnp" type="text" />
             </div>
+            <div class="row address_nav">
+              <span class="btn left_arrow">&#x2190;</span>
+              <span class="address_name"></span>
+              <span class="btn right_arrow">&#x2192;</span>
+            </div>
             <div class="row">
-              <input id="country" name="country" type="hidden" value="Romania" /> <label for="region" data-loc="region"></label><input
-                id="region" name="region" type="text" />
+              <label for="region" data-loc="region"></label><input id="region" name="region" type="text" />
             </div>
             <div class="row">
               <label for="city" data-loc="city"></label><input id="city" name="city" type="text" />
@@ -197,9 +200,13 @@
             <div class="row">
               <label for="cphone" data-loc="phone"></label><input id="cphone" name="cphone" type="text" />
             </div>
+            <div class="row address_nav">
+              <span class="btn left_arrow">&#x2190;</span>
+              <span class="address_name"></span>
+              <span class="btn right_arrow">&#x2192;</span>
+            </div>
             <div class="row">
-              <input id="ccountry" name="ccountry" type="hidden" value="Romania" /> <label for="cregion" data-loc="region"></label><input
-                id="cregion" name="cregion" type="text" />
+              <label for="cregion" data-loc="region"></label><input id="cregion" name="cregion" type="text" />
             </div>
             <div class="row">
               <label for="ccity" data-loc="city"></label><input id="ccity" name="ccity" type="text" />
