--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -70,9 +70,8 @@
       </div>
     </form>
     <div class="row_simple auth bordertop top10">
-        <a id="authgo" href="#" data-loc="authenticate"></a>
-        <a id="forgotpass" href="#" data-loc="forgot.password"></a>
-        <a id="newuser" href="#" data-loc="new.user"></a>
+      <a id="authgo" href="#" data-loc="authenticate"></a> <a id="forgotpass" href="#" data-loc="forgot.password"></a> <a id="newuser"
+        href="#" data-loc="new.user"></a>
     </div>
   </div>
 
@@ -135,87 +134,92 @@
         </ul>
         <div id="pf" class="content">
           <form id="order_form">
-            <div class="row">
-              <label for="fname" data-loc="first.name"></label><input id="fname" name="fname" type="text" />
+            <div class="column cart_form_column">
+              <div class="row">
+                <label for="fname" data-loc="first.name"></label><input id="fname" name="fname" type="text" />
+              </div>
+              <div class="row">
+                <label for="lname" data-loc="last.name"></label><input id="lname" name="lname" type="text" />
+              </div>
+              <div class="row">
+                <label for="email" data-loc="email"></label><input id="email" name="email" type="text" />
+              </div>
+              <div class="row">
+                <label for="phone" data-loc="phone"></label><input id="phone" name="phone" type="text" />
+              </div>
+              <div class="row">
+                <label for="cnp" data-loc="cnp"></label><input id="cnp" name="cnp" type="text" />
+              </div>
             </div>
-            <div class="row">
-              <label for="lname" data-loc="last.name"></label><input id="lname" name="lname" type="text" />
-            </div>
-            <div class="row">
-              <label for="email" data-loc="email"></label><input id="email" name="email" type="text" />
-            </div>
-            <div class="row">
-              <label for="phone" data-loc="phone"></label><input id="phone" name="phone" type="text" />
-            </div>
-            <div class="row">
-              <label for="cnp" data-loc="cnp"></label><input id="cnp" name="cnp" type="text" />
-            </div>
-            <div class="row address_nav">
-              <span class="btn left_arrow">&#x2190;</span>
-              <span class="address_name"></span>
-              <span class="btn right_arrow">&#x2192;</span>
-            </div>
-            <div class="row">
-              <label for="region" data-loc="region"></label><input id="region" name="region" type="text" />
-            </div>
-            <div class="row">
-              <label for="city" data-loc="city"></label><input id="city" name="city" type="text" />
-            </div>
-            <div class="row">
-              <label for="address" data-loc="address"></label><input id="address" name="address" type="text" />
-            </div>
-            <div class="row">
-              <label for="zip" data-loc="zip"></label><input id="zip" name="zip" type="text" />
+            <div class="column cart_form_column left10">
+              <div class="row address_nav">
+                <span class="btn left_arrow">&#x2190;</span> <span class="address_name"></span> <span class="btn right_arrow">&#x2192;</span>
+              </div>
+              <div class="row">
+                <label for="region" data-loc="region"></label><input id="region" name="region" type="text" />
+              </div>
+              <div class="row">
+                <label for="city" data-loc="city"></label><input id="city" name="city" type="text" />
+              </div>
+              <div class="row">
+                <label for="address" data-loc="address"></label><input id="address" name="address" type="text" />
+              </div>
+              <div class="row">
+                <label for="zip" data-loc="zip"></label><input id="zip" name="zip" type="text" />
+              </div>
             </div>
             <div class="row">
               <div id="terms_wrapper">
                 <input id="terms" name="terms" type="checkbox" /> <label for="terms" data-loc="terms.and.conds"></label>
               </div>
             </div>
+
           </form>
-          <div>
-            <a id="buy_final" class="top10" href="#" data-loc="buy_final"></a>
+          <div class="order_button">
+            <a id="buy_final" class="btn" href="#" data-loc="buy_final"></a>
           </div>
         </div>
         <div id="pj" class="content">
           <form id="order_form_company">
-            <div class="row">
-              <label for="cname" data-loc="company.name"></label><input id="cname" name="cname" type="text" />
+            <div class="column cart_form_column">
+              <div class="row">
+                <label for="cname" data-loc="company.name"></label><input id="cname" name="cname" type="text" />
+              </div>
+              <div class="row">
+                <label for="cif" data-loc="company.cif"></label><input id="cif" name="cif" type="text" />
+              </div>
+              <div class="row">
+                <label for="cregcom" data-loc="company.reg.com"></label><input id="cregcom" name="cregcom" type="text" />
+              </div>
+              <div class="row">
+                <label for="cbank" data-loc="company.bank"></label><input id="cbank" name="cbank" type="text" />
+              </div>
+              <div class="row">
+                <label for="cbankaccount" data-loc="company.bank.account"></label><input id="cbankaccount" name="cbankaccount" type="text" />
+              </div>
+              <div class="row">
+                <label for="cemail" data-loc="email"></label><input id="cemail" name="cemail" type="text" />
+              </div>
+              <div class="row">
+                <label for="cphone" data-loc="phone"></label><input id="cphone" name="cphone" type="text" />
+              </div>
             </div>
-            <div class="row">
-              <label for="cif" data-loc="company.cif"></label><input id="cif" name="cif" type="text" />
-            </div>
-            <div class="row">
-              <label for="cregcom" data-loc="company.reg.com"></label><input id="cregcom" name="cregcom" type="text" />
-            </div>
-            <div class="row">
-              <label for="cbank" data-loc="company.bank"></label><input id="cbank" name="cbank" type="text" />
-            </div>
-            <div class="row">
-              <label for="cbankaccount" data-loc="company.bank.account"></label><input id="cbankaccount" name="cbankaccount" type="text" />
-            </div>
-            <div class="row">
-              <label for="cemail" data-loc="email"></label><input id="cemail" name="cemail" type="text" />
-            </div>
-            <div class="row">
-              <label for="cphone" data-loc="phone"></label><input id="cphone" name="cphone" type="text" />
-            </div>
-            <div class="row address_nav">
-              <span class="btn left_arrow">&#x2190;</span>
-              <span class="address_name"></span>
-              <span class="btn right_arrow">&#x2192;</span>
-            </div>
-            <div class="row">
-              <label for="cregion" data-loc="region"></label><input id="cregion" name="cregion" type="text" />
-            </div>
-            <div class="row">
-              <label for="ccity" data-loc="city"></label><input id="ccity" name="ccity" type="text" />
-            </div>
-            <div class="row">
-              <label for="caddress" data-loc="address"></label><input id="caddress" name="caddress" type="text" />
-            </div>
-            <div class="row">
-              <label for="czip" data-loc="zip"></label><input id="czip" name="czip" type="text" />
+            <div class="column cart_form_column left10">
+              <div class="row address_nav">
+                <span class="btn left_arrow">&#x2190;</span> <span class="address_name"></span> <span class="btn right_arrow">&#x2192;</span>
+              </div>
+              <div class="row">
+                <label for="cregion" data-loc="region"></label><input id="cregion" name="cregion" type="text" />
+              </div>
+              <div class="row">
+                <label for="ccity" data-loc="city"></label><input id="ccity" name="ccity" type="text" />
+              </div>
+              <div class="row">
+                <label for="caddress" data-loc="address"></label><input id="caddress" name="caddress" type="text" />
+              </div>
+              <div class="row">
+                <label for="czip" data-loc="zip"></label><input id="czip" name="czip" type="text" />
+              </div>
             </div>
             <div class="row">
               <div id="terms_wrapper">
@@ -223,15 +227,17 @@
               </div>
             </div>
           </form>
-          <div class="top10">
-            <a id="c_buy_final_comp" href="#" data-loc="buy_final"></a>
+          <div class="order_button">
+            <a id="c_buy_final_comp" class="btn" href="#" data-loc="buy_final"></a>
           </div>
         </div>
       </div>
     </div>
     <div id="cart_footer">
-      <span id="total">0 RON</span> <a id="buy_step1" href="#" data-loc="buy_step1"></a> <a id="terms_link" href="/terms" target="_blank"
-        data-loc="terms.link"></a>
+      <span id="total">0 RON</span> 
+      <a id="buy_step1" href="#" data-loc="buy_step1"></a> 
+      <a id="terms_link" href="/terms" target="_blank" data-loc="terms.link"></a>
+      <a id="buy_step0" href="#" data-loc="buy_step0"></a> 
     </div>
   </div>
 </body>
