--- a/shopweb/web/templates/productquickview.html
+++ b/shopweb/web/templates/productquickview.html
@@ -23,6 +23,9 @@
           <div class="detailPrice">
             <span data-snip="detailPrice"></span>
           </div>
+          <div class="stock">
+            <span data-snip="stock"></span>
+          </div>
         </div>
         <div class="tab_select">
           <ul id="product_details_tab">
@@ -36,20 +39,24 @@
         </div>
         <div id="prod_specs" class="prod_specs tab_content">
           <div data-snip="specs">
-             <div class="row">
-             	<div class="column1"><span class="prop_name"></span></div>
-             	<div class="column2"><span class="prop_value"></span></div>
-             </div>
+            <div class="row">
+              <div class="column1">
+                <span class="prop_name"></span>
+              </div>
+              <div class="column2">
+                <span class="prop_value"></span>
+              </div>
+            </div>
           </div>
         </div>
-        
-        <div id="edit" class="tab_content" data-permissions="write">
- 
-          <form id="edit_form" method="POST" data-snip="edit">
-          
-            <div class="upload_form_fields" >
 
-  			  <div class="tab_select">
+        <div id="edit" class="tab_content" data-permissions="write">
+
+          <form id="edit_form" method="POST" data-snip="edit">
+
+            <div class="upload_form_fields">
+
+              <div class="tab_select">
                 <ul id="edit_product_tab" class="create_product_tab">
                   <li class="active"><a href="#edit_fields" data-loc="product.info"></a></li>
                   <li><a href="#edit_specs" data-loc="specs"></a></li>
@@ -57,65 +64,74 @@
                   <li><a href="#edit_files" data-loc="files"></a></li>
                 </ul>
               </div>
-              
-              <div class="horiz_right btn" id="save_product"><a href="#" data-loc="save"></a></div>
-              
-          	  <div id="edit_fields" class="fields tab_content">
-          	    <div class="column">
-	          	    <div class="row">
-	          	      <label for="edit_title" data-loc="title"></label><input id="edit_title" type="text" name="edit_title"/>
-	          	    </div>
-	          	    <div class="row">
-	          	      <label for="edit_price" data-loc="price"></label><input id="edit_price" type="number" name="edit_price"/>
-	          	    </div>
-	          	    <div class="row">
-	          	      <label for="edit_discount_price" data-loc="discount.price"></label><input id="edit_discount_price" type="number" name="edit_discount_price"/>
-	          	    </div>
-	          	    <div class="select_row">
-	          	      <label for="edit_categories" data-loc="categories"></label>
-	                  <select id="edit_categories" multiple="multiple" data-snip="catlist" name="edit_categories"></select>
-	                </div>
-	                <div class="row">
-	                  <label for="edit_keywords" data-loc="keywords"></label>
-	                  <input id="edit_keywords" type="text" name="edit_keywords"/>
-	                </div>
+
+              <div class="horiz_right btn" id="save_product">
+                <a href="#" data-loc="save"></a>
+              </div>
+
+              <div id="edit_fields" class="fields tab_content">
+                <div class="column">
+                  <div class="column">
+                    <div class="row">
+                      <label for="edit_title" data-loc="title"></label><input id="edit_title" type="text" name="edit_title" />
+                    </div>
+                    <div class="row">
+                      <label for="edit_price" data-loc="price"></label><input id="edit_price" type="number" name="edit_price" />
+                    </div>
+                    <div class="row">
+                      <label for="edit_discount_price" data-loc="discount.price"></label><input id="edit_discount_price" type="number"
+                        name="edit_discount_price" />
+                    </div>
+                    <div class="row">
+                      <label for="edit_keywords" data-loc="keywords"></label> <input id="edit_keywords" type="text" name="edit_keywords" />
+                    </div>
+                    <div class="row">
+                      <label for="edit_stock" data-loc="stock"></label> <input id="edit_stock" type="text" name="edit_stock" />
+                    </div>
+                  </div>
+                  <div class="column left10">
+                    <div class="select_row">
+                      <label for="edit_categories" data-loc="categories"></label> <select id="edit_categories" multiple="multiple"
+                        data-snip="catlist" name="edit_categories"></select>
+                    </div>
+                  </div>
                 </div>
               </div>
               <div id="edit_specs" class="form_specs tab_content">
-                  <div>
-                    <div class="specs_title" data-loc="add.specs"></div>
-                    <img id="edit_add_prop" class="clickable" src="/static/images/plus.png"/>
+                <div>
+                  <div class="specs_title" data-loc="add.specs"></div>
+                  <img id="edit_add_prop" class="clickable" src="/static/images/plus.png" />
+                </div>
+                <div id="edit_prop_fields" class="row">
+                  <div class="edit_props_sample">
+                    <k:input type='text' name='pkey' />
+                    <v:input type='text' name='pval' />
+                    <img class='clickable' src='/static/images/minus.png' />
                   </div>
-                  <div id="edit_prop_fields" class="row">
-                    <div class="edit_props_sample">
-                      <k:input type='text' name='pkey'/>
-                      <v:input type='text' name='pval'/>
-                      <img class='clickable' src='/static/images/minus.png'/>
-                    </div>
-                  </div>
-			  </div>              
+                </div>
+              </div>
               <div id="edit_textzone" class="form_textzone tab_content">
-              	<div class="row">
+                <div class="row">
                   <label for="edit_description" data-loc="description"></label>
                   <div id="edit_toggle_desc" class="clickable right">
-                     <div class="edit_toggle_text" data-loc="view"></div>
-                     <div class="edit_toggle_text hidden" data-loc="edit"></div>
+                    <div class="edit_toggle_text" data-loc="view"></div>
+                    <div class="edit_toggle_text hidden" data-loc="edit"></div>
                   </div>
                 </div>
                 <textarea class="edit_toggle" id="edit_description" name="edit_description"></textarea>
-                <div class="edit_toggle preview" id="edit_description_view" ></div>
+                <div class="edit_toggle preview" id="edit_description_view"></div>
               </div>
               <div id="edit_files" class="tab_content">
-                 <input type="file" id="fileselect" name="files" multiple="multiple" />
+                <input type="file" id="fileselect" name="files" multiple="multiple" />
               </div>
             </div>
-         </form> 
+          </form>
         </div>
       </div>
     </div>
     <div class="dialog_footer">
       <div class="horiz_right" data-snip="productlink">
-         <a href="#"></a>
+        <a href="#"></a>
       </div>
     </div>
   </div>
