--- a/shopweb/web/templates/categorieslist.html
+++ b/shopweb/web/templates/categorieslist.html
@@ -1,7 +1,6 @@
 <ul>
   <li data-permissions="write">
-    <div class="cat_box">
-      <img class="add_item" src="/static/images/add-item.png" />
+    <div class="cat_box cat_add_item">
     </div>
   </li>
   <li data-snip="item">
@@ -14,7 +13,7 @@
           <img src="/static/images/edit.png" />
         </div>
       </div>
-      <div class="info_tag">
+      <div class="info_tag cat_info_tag">
         <div class="info_tag_text cat_text"></div>
       </div>
     </div>
