--- a/shopweb/web/templates/productslist.html
+++ b/shopweb/web/templates/productslist.html
@@ -1,7 +1,6 @@
 <ul>
   <li data-permissions="write">
-    <div class="item_box">
-      <img class="add_item" src="/static/images/add-item.png" />
+    <div class="item_box add_item">
     </div>
   </li>
   <li data-snip="item">
