--- a/shopweb/web/templates/productquickview.html
+++ b/shopweb/web/templates/productquickview.html
@@ -17,13 +17,16 @@
     <div id="pright">
       <div class="prod_details">
         <div class="prod_header">
+          <div id="fb-share-button" >
+            <a href="#"><img src="/static/images/facebook.png"/></a>
+          </div>
           <div id="add_to_cart_box">
             <a id="add_to_cart" href="#"><img src="/static/images/cart_black.png" /></a>
           </div>
           <div class="detailPrice">
             <span data-snip="detailPrice"></span>
           </div>
-          <div class="stock">
+          <div class="prod_price_line">
             <span data-snip="stock"></span>
           </div>
         </div>
