--- a/shopweb/web/templates/cartitem.html
+++ b/shopweb/web/templates/cartitem.html
@@ -6,6 +6,8 @@
       <li><span data-loc="quantity" /> <input type="number" maxlength="3" size="3" /></li>
       <li><span data-loc="price" /> <span class="cart_price"></span> <span>RON</span></li>
     </ul>
+  </div>
+  <div class="column del_cart_item">
     <a href="#"><img src="/static/images/close.png" /></a>
   </div>
 </div>
