--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -11,10 +11,12 @@
 <script type="text/javascript" src="/static/js/jquery.tabify.js"></script>
 <script type="text/javascript" src="/static/js/jquery.base64.min.js"></script>
 <script type="text/javascript" src="/static/js/common.js"></script>
+<script type="text/javascript" src="http://connect.facebook.net/ro_RO/all.js"></script>
 
 </head>
 
 <body>
+  <div class="fb-root"></div>
   <div class="wrap">
     <div class="header">
       <div id="product_title">
@@ -42,6 +44,8 @@
         <div id="logo" class="top_items">
           <a href="/"><img src="/static/images/logo-small.png" /></a>
         </div>
+        <div class="fb_area top_items">
+        </div>
       </div>
     </div>
     <div id="notice_e"></div>
@@ -52,11 +56,20 @@
 
   <div class="footer">
     <div class="center">
-      <ul>
-        <li>Copyright (c) 2014</li>
-        <li>Contact: <a href="mailto:office@idid.ro">office@idid.ro</a></li>
-        <li><a href="/terms" target="_blank" data-loc="terms.link"></a></li>
-      </ul>
+      <div class="column">
+        <ul>
+          <li>Copyright (c) 2014</li>
+          <li>Contact: <a href="mailto:office@idid.ro">office@idid.ro</a></li>
+          <li><a href="/terms" data-loc="terms.link"></a></li>
+        </ul>
+      </div>
+      <div class="column left30">
+        <ul>
+          <li><a href="/dataprotection" data-loc="data.protection.link"></a></li>
+          <li><a href="/returnpolicy" data-loc="return.policy.link"></a></li>
+          <li><a href="http://www.anpc.gov.ro/">ANPC</a></li>
+        </ul>
+      </div>
     </div>
   </div>
 
@@ -88,7 +101,7 @@
       <div class="column">
         <img src="/static/images/useradd.png" />
       </div>
-      <div class="column left30 userinputs">
+      <div class="column userinputs">
         <form action="/create/user" id="newuser_form" method="POST">
           <div class="fields">
             <div class="row">
