--- a/shopweb/web/templates/address.html
+++ b/shopweb/web/templates/address.html
@@ -4,7 +4,7 @@
       <a class="addr_title" href="#"></a>
     </div>
     <div class="right del">
-      <a href=""><img src="/static/images/minus.png" /></a>
+      <a href=""><img src="/static/images/minus.png" data-img=""/></a>
     </div>
   </div>
   <div class="accordion_content">
