--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -44,8 +44,7 @@
         <div id="logo" class="top_items">
           <a href="/"><img src="/static/images/logo-small.png" /></a>
         </div>
-        <div class="fb_area top_items">
-        </div>
+        <div class="fb_area top_items"></div>
       </div>
     </div>
     <div id="notice_e"></div>
